--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ body{
 }
 .header{
     background-color: #333;
-    padding: 0.5em 0.5em 0.5em;
+    padding: 0.2em 0.2em 0.2em;
     color: #fff;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: center;
@@ -18,6 +18,25 @@ body{
   background-color: #333;
   color: #fff;
 }
+html, body {
+  height: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+.main-content {
+  flex: 1;
+}
+
+.footer {
+  position:relative;
+  bottom: 0;
+  width: 100%;
+}
+
 /* Apply styles to the list container */
 ul {
     list-style: none; /* remove bullet points */
